--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "fs-extra": "^7.0.0",
-    "selenium-webdriver": "^3.6.0"
+    "geckodriver": "^1.12.2",
+    "selenium-webdriver": "^4.0.0-alpha.1"
   }
 }
